@@ -5,16 +5,17 @@ import com.auth0.jwt.interfaces.DecodedJWT;
 import io.dataease.auth.filter.F2CLinkFilter;
 import io.dataease.commons.constants.SysLogConstants;
 import io.dataease.commons.utils.DeLogUtils;
-import io.dataease.plugins.common.base.domain.PanelGroupWithBLOBs;
-import io.dataease.plugins.common.base.domain.PanelLink;
 import io.dataease.controller.panel.api.LinkApi;
 import io.dataease.controller.request.chart.ChartExtRequest;
 import io.dataease.controller.request.panel.link.*;
 import io.dataease.dto.panel.link.GenerateDto;
 import io.dataease.dto.panel.link.ValidateDto;
+import io.dataease.plugins.common.base.domain.PanelGroupWithBLOBs;
+import io.dataease.plugins.common.base.domain.PanelLink;
 import io.dataease.service.chart.ChartViewService;
 import io.dataease.service.panel.PanelLinkService;
 import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -25,6 +26,7 @@ import org.springframework.web.context.request.ServletRequestAttributes;
 import javax.annotation.Resource;
 import javax.servlet.http.HttpServletRequest;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 @RestController
@@ -65,19 +67,29 @@ public class LinkServer implements LinkApi {
     @Override
     public ValidateDto validate(@RequestBody LinkValidateRequest request) throws Exception {
         String link = request.getLink();
-        link = URLDecoder.decode(link, "UTF-8");
+        link = URLDecoder.decode(link, StandardCharsets.UTF_8);
         String json = panelLinkService.decryptParam(link);
-
+        String[] jsonArray = json.split(",");
+        String uuid = null;
+        int len = jsonArray.length;
+        if (len > 1) {
+            uuid = jsonArray[1];
+        }
         String user = request.getUser();
-        user = URLDecoder.decode(user, "UTF-8");
+        user = URLDecoder.decode(user, StandardCharsets.UTF_8);
         user = panelLinkService.decryptParam(user);
 
         ValidateDto dto = new ValidateDto();
         dto.setUserId(user);
-        String resourceId = json;
+        String resourceId = jsonArray[0];
         PanelLink one = panelLinkService.findOne(resourceId, Long.valueOf(user));
         dto.setResourceId(resourceId);
         if (ObjectUtils.isEmpty(one)) {
+            dto.setValid(false);
+            return dto;
+        }
+        String mappingUuid = panelLinkService.getMappingUuid(one);
+        if (!StringUtils.equals(uuid, mappingUuid)) {
             dto.setValid(false);
             return dto;
         }
@@ -94,8 +106,8 @@ public class LinkServer implements LinkApi {
     }
 
     @Override
-    public Object resourceDetail(@PathVariable String resourceId,@PathVariable String userId) {
-        return panelLinkService.resourceInfo(resourceId,userId);
+    public Object resourceDetail(@PathVariable String resourceId, @PathVariable String userId) {
+        return panelLinkService.resourceInfo(resourceId, userId);
     }
 
     @Override
@@ -125,7 +137,7 @@ public class LinkServer implements LinkApi {
             operateType = SysLogConstants.OPERATE_TYPE.MB_VIEW;
         }
         if (ObjectUtils.isEmpty(userId)) return;
-        PanelGroupWithBLOBs panelGroupWithBLOBs = panelLinkService.resourceInfo(panelId,String.valueOf(userId));
+        PanelGroupWithBLOBs panelGroupWithBLOBs = panelLinkService.resourceInfo(panelId, String.valueOf(userId));
         String pid = panelGroupWithBLOBs.getPid();
         DeLogUtils.save(operateType, SysLogConstants.SOURCE_TYPE.LINK, panelId, pid, userId, SysLogConstants.SOURCE_TYPE.USER);
     }
